--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/Mapbender/CoreBundle/Resources/public/mapquery"]
 	path = src/Mapbender/CoreBundle/Resources/public/mapquery
-	url = git@github.com:arsgeografica/mapquery.git
+	url = git://github.com/arsgeografica/mapquery.git
