Use global anonymous authorization

--- a/application/app/config/security.yml
+++ b/application/app/config/security.yml
@@ -18,21 +18,20 @@ security:
             security: false
 
         login:
-            pattern:  ^/demo/secured/login$
+            pattern:  ^/user/login$
             security: false
 
         secured_area:
-            pattern:    ^/demo/secured/
+            pattern:    ^/
+            anonymous: ~
             form_login:
-                check_path: /demo/secured/login_check
-                login_path: /demo/secured/login
+                check_path: /user/login_check
+                login_path: /user/login
             logout:
-                path:   /demo/secured/logout
-                target: /demo/
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+                path:   /user/logout
+                target: /
 
     access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        #- { path: ^/_internal, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
+        - { path: ^/user/login,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user,          roles: ROLE_USER }
+        - { path: ^/admin,         roles: ROLE_ADMIN }
