Second Demo with WMTS

--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: mapbender_demo.yml }
+    - { resource: mapbender_demos.yml }
     - { resource: parameters.ini }
     - { resource: security.yml }
 
