--- a/application/app/config/mapbender_demos.yml
+++ b/application/app/config/mapbender_demos.yml
@@ -91,3 +91,79 @@ parameters:
                         class: Mapbender\CoreBundle\Element\Toc
                         target: map
 
+        osm_denver:
+            title: OSM Denver Map
+            template:  Mapbender\CoreBundle\Template\Fullscreen
+            srs: EPSG:4326
+            units: 'degrees'
+            extents:
+                start: [-102.75,38.5,-102.5,39.5]
+                max: [-180,-90,180,90]
+            maxResolution: 'auto'
+            layersets:
+                main:
+                    osm-denver:
+                        class: Mapbender\WmtsBundle\WmtsLayer
+                        title: Denver OSM
+                        url: http://demo.mapserver.org:8081/geocache/wmts
+                        layer: osm-denver
+                        style: default
+                        matrixSet: osmgrid
+                        baselayer: true
+                        visible: true,
+                        format: image/png
+                        origin: [-109.060090, 41.013656]
+                    mapbender_users:
+                        class: Mapbender\WmsBundle\WmsLayer
+                        title: Mapbender Users
+                        url: http://wms1.ccgis.de/cgi-bin/mapserv?map=/data/umn/mapbender_user/mapbender_user.map
+                        layers:
+                            - { name: Mapbender_User,    title : Nutzer,  visible: true }
+                            - { name: Mapbender_Names,   title : Namen,   visible: true }
+                        baselayer: false
+                        visible: true
+                        format: image/png
+                        transparent: true
+                        tiled: false
+                        opacity: 85
+            elements:
+                top:
+                    mapclick:
+                        title: Map Click
+                        class: Acme\DemoBundle\Element\MapClick
+                        label: true
+                        group: maptools
+                        target: map
+                    mapbox:
+                        title: Map Box
+                        class: Acme\DemoBundle\Element\MapBox
+                        group: maptools
+                        target: map
+                    lineruler:
+                        title: Distance
+                        class: Mapbender\CoreBundle\Element\LineRuler
+                        group: maptools
+                        target: map
+                    arearuler:
+                        title: Area
+                        class: Mapbender\CoreBundle\Element\AreaRuler
+                        group: maptools
+                        target: map
+                    toc-button:
+                        title: TOC
+                        class: Mapbender\CoreBundle\Element\Button
+                        target: toc
+                        action: open
+                    about:
+                        title: About
+                        class: Mapbender\CoreBundle\Element\AboutDialog
+                content:
+                    map:
+                        title: Main Map
+                        class: Mapbender\CoreBundle\Element\Map
+                        layerset: main
+                    toc:
+                        title: Table of Contents
+                        class: Mapbender\CoreBundle\Element\Toc
+                        target: map
+
