updated submodule and added wms specific configuration

--- a/application/app/config/mapbender_demos.yml
+++ b/application/app/config/mapbender_demos.yml
@@ -1,4 +1,5 @@
 parameters:
+    sensio_framework_extra.converter.doctrine.class: "Mapbender\Component\CustomDoctrineParamConverter"
     applications:
         mapbender_user:
             title: Mapbender User Demo Map
