added demo database

--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -42,6 +42,7 @@ doctrine:
         host:     %database_host%
         port:     %database_port%
         dbname:   %database_name%
+        path:     %database_name%
         user:     %database_user%
         password: %database_password%
         charset:  UTF8
