--- a/application/app/config/parameters.ini
+++ b/application/app/config/parameters.ini
@@ -2,12 +2,12 @@
 ; by enclosing the key with % (like %database_user%)
 ; Comments start with ';', as in php.ini
 [parameters]
-    database_driver   = pdo_mysql
-    database_host     = localhost
-    database_port     =
-    database_name     = symfony
-    database_user     = root
-    database_password =
+    database_driver   = pdo_sqlite
+    database_host     = 
+    database_port     = 
+    database_name     = %kernel.root_dir%/db/demo.sq3
+    database_user     = 
+    database_password = 
 
     mailer_transport  = smtp
     mailer_host       = localhost
