--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -3,25 +3,26 @@ parameters:
     applications:
         mapbender_user:
             title: Mapbender User Demo Map
-            description: "Simple map showing WMS use."
+            description: "Simple map showing WMS use. Use root/root to login."
             roles: [ROLE_USER]
             template:  Mapbender\CoreBundle\Template\Fullscreen
             layersets:
                 main:
-                    demis:
+                    ne2:
                         class: Mapbender\WmsBundle\WmsLayer
-                        title: Demis World Map
-                        url: http://www2.demis.nl/wms/wms.ashx?wms=WorldMap
+                        title: Natural Earth
+                        url: http://www.catais.org/geoserver/wms?SERVICE=WMS
                         layers:
-                            - { name: Bathymetry,    title :Bathymetry,  visible: true, queryable: true }
-                            - { name: Countries,     title :Countries,   visible: true, queryable: true }
-                            - { name: Topography,    title :Topography,  visible: true, queryable: true }
-                            - { name: Hillshading,   title :Hillshading, visible: true }
-                        baselayer: false
-                        visible: true
-                        format: image/png
-                        transparent: true
+                            - { name: 'ne2:ne2', title: 'Natural Earth 2'}
                         tiled: true
+                    osm_roads:
+                        class: Mapbender\WmsBundle\WmsLayer
+                        title: OpenStreetMap Roads
+                        url: http://osm.omniscale.net/proxy/service?
+                        layers:
+                            - { name: osm_roads, title: OpenStreetMap WMS }
+                        tiled: false
+                        baselayer: false
                     mapbender_users:
                         class: Mapbender\WmsBundle\WmsLayer
                         title: Mapbender Users
@@ -41,12 +42,9 @@ parameters:
                     demis:
                         class: Mapbender\WmsBundle\WmsLayer
                         title: Demis World Map
-                        url: http://www2.demis.nl/wms/wms.ashx?wms=WorldMap
+                        url: http://www.catais.org/geoserver/wms?SERVICE=WMS
                         layers:
-                            - { name: Bathymetry,    title :Bathymetry,  visible: true }
-                            - { name: Countries,     title :Countries,   visible: true }
-                            - { name: Topography,    title :Topography,  visible: true }
-                            - { name: Hillshading,   title :Hillshading, visible: true }
+                            - { name: 'ne2:ne2', title: 'Natural Earth 2'}
             elements:
                 top:
                     mapclick:
@@ -100,16 +98,21 @@ parameters:
                         srs: EPSG:4326
                         units: degrees
                         extents:
-                            start: [-180,-90,180,90]
+                            start: [-43.313833377731, 33.006761223615, 65.104961268907, 59.198710149963]
                             max: [-180,-90,180,90]
                         scales: [25000000, 10000000,5000000,1000000,500000]
                         maxResolution: 'auto'
-                        overview:
-                            layerset: overview
+                        #overview:
+                        #    layerset: overview
+                    zoombar:
+                        class: Mapbender\CoreBundle\Element\ZoomBar
+                        target: map
+                        position: ['1em' '4em']
                     toc:
                         title: Table of Contents
                         class: Mapbender\CoreBundle\Element\Toc
                         target: map
+                        autoOpen: false
                     lineruler:
                         title: Distance
                         class: Mapbender\CoreBundle\Element\LineRuler
