--- a/application/app/config/routing.yml
+++ b/application/app/config/routing.yml
@@ -1,15 +1,15 @@
 # Per default, the application list is the start page. You may change that.
 _mapbender_start:
     pattern: "/"
-    defaults: { _controller: MapbenderCoreBundle:Application:list}
+    defaults: { _controller: MapbenderCoreBundle:Welcome:list}
 
 _mapbender_corebundle:
     resource: "@MapbenderCoreBundle/Controller/"
     type: annotation
 
-_mapbender_wmsbundle:
-    resource: "@MapbenderWmsBundle/Controller/"
-    type: annotation
+#_mapbender_wmsbundle:
+#    resource: "@MapbenderWmsBundle/Controller/"
+#    type: annotation
 
 _mapbender_managerbundle:
     resource: "@MapbenderManagerBundle/Controller"
