--- a/application/app/config/security.yml
+++ b/application/app/config/security.yml
@@ -1,16 +1,12 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
-
-    role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        Mapbender\CoreBundle\Entity\User: sha512
 
     providers:
-        in_memory:
-            users:
-                user:  { password: user, roles: [ 'ROLE_USER' ] }
-                root: { password: root, roles: [ 'ROLE_ADMIN' ] }
+        main:
+            entity:
+                class: Mapbender\CoreBundle\Entity\User
+                property: username
 
     firewalls:
         dev:
